# termgui

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: html_parser.cpp  html_parser.hpp  main.cpp
src/html/: html_parser.cpp  html_parser.hpp
